unpackaged/main/default/objects/fferpcore__SequenceField__mdt/fferpcore__SequenceField__mdt.object-meta.xml
<CustomObject>
    <description>Contains records that specify the objects and fields to which sequences are to be applied.</description>
    <label>Sequence Field</label>
    <pluralLabel>Sequence Fields</pluralLabel>
</CustomObject>