unpackaged/main/default/objects/fferpcore__SequenceField__mdt/fields/fferpcore__Enabled__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the sequence is enabled for the object and field specified.</description>
    <inlineHelpText>Indicates whether the sequence is enabled for the object and field specified.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>