unpackaged/main/default/objects/fferpcore__SequenceField__mdt/fields/fferpcore__Field__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Field__c</fullName>
    <description>Field to which the number sequence is to be written.</description>
    <inlineHelpText>Field to which the number sequence is to be written.</inlineHelpText>
    <label>Field</label>
    <metadataRelationshipControllingField>fferpcore__SequenceField__mdt.fferpcore__Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Sequence Fields</relationshipLabel>
    <relationshipName>SequenceFields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>